# ratchetx2

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  chat-server.yaml
.github/scripts/: test.sh
.github/workflows/: publish.yaml  release.yaml  test.yaml
e2ee_chat_client/: Cargo.toml  README.md
e2ee_chat_client/src/: cli.rs  client.rs  main.rs  message.rs  navi.rs  screen.rs
e2ee_chat_client/src/widget/: app.rs  bubble.rs  connecting.rs  contacts.rs  conversation.rs  explore.rs  footer.rs  form.rs  hint.rs  message.rs  mod.rs  pop_up.rs  quit.rs  setting.rs
e2ee_chat_ingress/: Cargo.toml  Containerfile  README.md
e2ee_chat_ingress/src/: main.rs
e2ee_chat_server/: Cargo.toml  Containerfile  README.md
e2ee_chat_server/src/: main.rs
ratchetx2/: Cargo.toml  README.md  build.rs
ratchetx2/proto/: chat.proto  message.proto  x3dh.proto
ratchetx2/src/: error.rs  init.rs  key.rs  lib.rs  party.rs  server.rs  x3dh.rs  xdedsa.rs  xeddsa.rs
ratchetx2/src/ratchet/: dh_root.rs  message.rs  mod.rs
ratchetx2/src/transport/: channel.rs  error.rs  grpc.rs  mod.rs
test/: Cargo.toml  ratchet.rs
tls/: README.md  cert.pem  key.pem  server.crt.conf  server.csr.conf
