[package]
name = "e2ee_chat_client"
version = "0.1.0"
edition = "2024"
description = "An E2EE chat client."

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.28"
ratatui = { version = "0.29.0" }
tui-textarea = { version = "0.7.0" }
ratchetx2 = { path = "../ratchetx2", version = "0.1" }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
