[package]
name = "e2ee_chat_client"
version = "0.2.7"
edition = "2024"
description = "An E2EE chat client."
keywords = ["E2EE", "double-ratchet", "xeddsa", "XEdDSA", "signal"]
license = "MIT"
authors = ["Louis <836250617@qq.com>"]
repository = "https://github.com/kingwingfly/ratchetx2"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bincode = "2.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = { version = "0.29" }
unicode-width = "0.2"
tui-textarea = { version = "0.7" }
ratchetx2 = { path = "../ratchetx2", version = "0.3" }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
parking_lot = "0.12"
mime_guess = "2.0"
mime = "0.3"
ratatui-image = "8.0"
regex = "1.12"
lru = "0.16.2"
image = "0.25.9"
ring = "0.17"
