[package]
name = "e2ee_chat_ingress"
version = "0.1.2"
edition = "2024"
description = "An E2EE chat reverse proxy."
keywords = ["E2EE", "double-ratchet", "xeddsa", "XEdDSA", "signal"]
license = "MIT"
authors = ["Louis <836250617@qq.com>"]
repository = "https://github.com/kingwingfly/ratchetx2"

[dependencies]
pingora = { git = "https://github.com/cloudflare/pingora", version = "0.4", features = [
    "rustls",
    "proxy",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
async-trait = "0.1"

[target.'cfg(not(windows))'.dependencies]
jemallocator = "0.5"
