[package]
name = "e2ee_chat_server"
version = "0.1.0"
edition = "2024"
description = "An E2EE chat server."

[dependencies]
ratchetx2 = { path = "../ratchetx2", version = "0.1" }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
clap = { version = "4.5", features = ["derive"] }
