[package]
name = "e2ee_chat_server"
version = "0.2.5"
edition = "2024"
description = "An E2EE chat server."
keywords = ["E2EE", "double-ratchet", "xeddsa", "XEdDSA", "signal"]
license = "MIT"
authors = ["Louis <836250617@qq.com>"]
repository = "https://github.com/kingwingfly/ratchetx2"

[dependencies]
ratchetx2 = { version = "0.3" }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
clap = { version = "4.5", features = ["derive"] }
