[package]
name = "ratchetx2"
version = "0.1.0-alpha.3"
edition = "2024"
keywords = ["double-ratchet", "double ratchet", "xeddsa", "XEdDSA", "signal"]
license = "MIT"
authors = ["Louis <836250617@qq.com>"]
repository = "https://github.com/kingwingfly/ratchetx2"
documentation = "https://docs.rs/ratchetx2"
description = "A double-ratchet implementation for building an E2EE message exchange app."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bincode = "2.0.1"
futures = "0.3.31"
ring = { version = "0.17.14", features = ["std"] }
curve25519-dalek = "4.1"
zeroize = { version = "1.8.1", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tonic = "*"
prost = "0.13"

[build-dependencies]
tonic-build = "*"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
