[package]
name = "ratchetx2"
version = "0.2.2"
edition = "2024"
keywords = ["E2EE", "double-ratchet", "xeddsa", "XEdDSA", "signal"]
license = "MIT"
authors = ["Louis <836250617@qq.com>"]
repository = "https://github.com/kingwingfly/ratchetx2"
documentation = "https://docs.rs/ratchetx2"
description = "A double-ratchet implementation for building an E2EE message exchange app."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bincode = "2.0"
futures = "0.3"
ring = { version = "0.17", features = ["std"] }               # std is needed to convert error
curve25519-dalek = "4.1"
zeroize = { version = "1.8", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tonic = { version = "0.13", features = ["tls-native-roots"] }
prost = "0.13"
parking_lot = "0.12"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
